# pyteg_bot

./: .gitignore  Makefile  README.md  README_RU.md  docker-compose.yml  smoke_api.sh
api/: Dockerfile  pyproject.toml
api/src/pytegbot_api/: __main__.py  app.py  dependencies.py  main.py
api/src/pytegbot_api/api/: system.py  tasks.py
api/src/pytegbot_api/core/: config.py
api/src/pytegbot_api/services/: artifact_store.py  docker_artifact_collector.py  docker_container_runtime.py  docker_execution_models.py  docker_executor.py  docker_log_streamer.py  task_manager.py  task_store.py
api/tests/: conftest.py  test_api_integration.py
api/tests/config/: tests.yaml
bot/: Dockerfile  pyproject.toml
bot/src/pytegbot_bot/: __main__.py  main.py
bot/src/pytegbot_bot/core/: config.py
bot/src/pytegbot_bot/handlers/: inline.py  message.py
bot/src/pytegbot_bot/services/: api_client.py  code_parser.py  formatter.py  inline_coordinator.py  telegram_artifacts.py
config/: api.local.yaml.example  api.yaml  bot.local.yaml.example  bot.yaml
runner/: Dockerfile  executor.py
shared/: pyproject.toml
shared/src/pytegbot_shared/: __init__.py  config.py  models.py
