[project]
name = "pytegbot-api"
version = "0.1.0"
description = "FastAPI backend for PyTegBot"
authors = [{ name = "k4m454k" }]
requires-python = ">=3.12,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{ include = "pytegbot_api", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.115,<1.0"
uvicorn = { extras = ["standard"], version = ">=0.34,<1.0" }
docker = ">=7.1,<8.0"
pytegbot-shared = { path = "../shared", develop = true }

[tool.poetry.group.dev.dependencies]
httpx = ">=0.28,<1.0"
pytest = ">=8.3,<9.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
