[tool.poetry]
name = "pytegbot-bot"
version = "0.1.0"
description = "Telegram bot for PyTegBot"
authors = ["k4m454k"]
packages = [{ include = "pytegbot_bot", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
aiogram = "==3.26.0"
httpx = ">=0.28,<1.0"
pydantic-settings = ">=2.7,<3.0"
pytegbot-shared = { path = "../shared", develop = false }

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
